--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
 
+[![Continuous Integration and Deployment](https://github.com/ffrankozz/net-cicd/actions/workflows/cicd.yaml/badge.svg)](https://github.com/ffrankozz/net-cicd/actions/workflows/cicd.yaml)
+
+Testing Status
